--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "MohamadReza Golbaba (Mrezagolbaba)",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.3",
     "@types/react": "^18.0.28",
